test/samples/invalid/interp/read_uninitialized_local.maruir
fun main()
locals a: uint8, b: uint8;
{
    entry:
        a := b + uint8(1);
        return;
}